--- a/style/styles.css
+++ b/style/styles.css
@@ -221,9 +221,7 @@ header nav ul li a {
     font-size: 22px;
     font-weight: 400;
 }
-.card{
-    max-width: 270px;
-}
+
 
 /* styles latest  */
 
@@ -366,6 +364,7 @@ header nav ul li a {
 }
 
 
+
   /* responsive  */
   @media (max-width:576px) {
 
@@ -425,6 +424,10 @@ header nav ul li a {
 
 .badge-img-one{
     width: 100%;
+}
+
+.btn{
+    padding: 10px 60px ;
 }
 
   }
