btn font size added

--- a/style/styles.css
+++ b/style/styles.css
@@ -311,6 +311,8 @@ header nav ul li a {
 
 .write-email {
     padding: 20px 140px;
+    color: rgb(255, 255, 255);
+    
 }
 
 .btn-primary {
@@ -428,6 +430,7 @@ header nav ul li a {
 
 .btn{
     padding: 10px 60px ;
+    font-size: 10px;
 }
 
   }
